SAWG-115: jquery.threedots plugin to make sure nothing overflows

--- a/devwidgets/collections/css/collections.css
+++ b/devwidgets/collections/css/collections.css
@@ -1,4 +1,5 @@
 /* Main Styles */
+div {word-wrap:break-word;}
 #collections_main_container{margin:20px 0px;}
 #collections_header{-moz-border-radius:2px 2px 0 0;-webkit-border-radius:2px 2px 0 0;border-radius:2px 2px 0 0;background-color:rgb(213,219,223);height:24px;padding:10px;}
 #collections_inner_container{-moz-border-radius:2px 2px 0 0;-webkit-border-radius:2px 2px 0 0;border-radius:2px 2px 0 0;background-color:rgb(239,242,244);padding:2px;float:left;position:relative;width:640px;}
@@ -211,8 +212,8 @@ img.content_image {max-width:300px; max-height:200px;}
 .albumCover.clicked{background-color:rgb(245,245,245);-moz-box-shadow:inset 3px 3px 12px -5px rgb(120,120,120);-webkit-box-shadow:inset 3px 3px 12px -5px rgb(120,120,120);box-shadow:inset 3px 3px 12px -5px rgb(120,120,120);padding:22px 18px 18px 22px;overflow:hidden;}
 .albumCover div.albumCoverImage{width:140px;height:105px;float:left;position:relative;}
 .albumCover div.albumCoverImage img{max-width:140px;max-height:105px;float:left;}
-.albumCover span.albumCoverTitle{color:#058EC4;font-weight:bold;font-size:14px;width:140px;float:left;position:relative;}
-.albumCover p{float:left;position:relative;width:140px;}
+.albumCover div.albumCoverTitle{color:#058EC4;font-weight:bold;font-size:14px;width:140px;float:left;position:relative; overflow:hidden;}
+.albumCover div.albumCoverDescription {float:left;position:relative;width:140px;overflow:hidden;}
 .albumCover.addAlbum {border:4px solid #bbb;background:url(/devwidgets/collections/images/add_icon.png) transparent 50% 50% no-repeat;height:210px;}
 .albumCover.addAlbum.clicked {background:url(/devwidgets/collections/images/add_icon.png) transparent 51% 51% no-repeat;}
 /* Single Album View */
@@ -224,9 +225,9 @@ img.content_image {max-width:300px; max-height:200px;}
 .albumImage div {width:300px; height:200px;}
 .albumDesc {float:left; min-height:190px; width:236px;margin-left:10px;}
 .albumDesc.editable {border:1px solid #ccc;}
-.albumHead {width:100%; float:left; position:relative; height:40px;}
-.albumHead div.albumTitleContainer {float:left; position:relative; width:400px; height:28px;}
-.albumHead h1 {float:left; position:relative; width:350px;}
+.albumHead {width:100%; float:left; position:relative; min-height:40px;}
+.albumHead div.albumTitleContainer {float:left; position:relative; width:400px; min-height:28px;}
+.albumHead h1 {float:left; position:relative; width:350px;overflow:hidden;}
 .albumHead div.configureAlbum {float:left; position:relative; width:155px;margin-top:-2px;padding:2px;text-align:right;}
 .albumHead div.configureAlbum.expanded {border:1px solid #999; -moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px; padding:1px;}
 .albumHead img {margin:3px 3px 0 0;}
@@ -236,8 +237,8 @@ img.content_image {max-width:300px; max-height:200px;}
 .categoryHeader h2 {float:left;position:relative;width:555px;margin:0;}
 .categoryHeader div {float:left;position:relative;width:35px;text-align:right;}
 .categoryPreview {float:left; margin-right:16px;height:180px;width:138px;position:relative;}
-.categoryPreview h3 {font-size:14px;color:#006E96; width:100%; float:left;font-weight:bold;position:relative;margin:5px 0px 0px 5px;}
-.categoryPreview span {width:100%; float:left; font-size:12px;font-weight:bold;position:relative;margin-left:5px;}
+.categoryPreview div.categoryPreviewName {font-size:14px;color:#006E96; width:133px; float:left;font-weight:bold;position:relative;margin:5px 0px 0px 5px;}
+.categoryPreview span.categoryPreviewItems {width:100%; float:left; font-size:12px;font-weight:bold;position:relative;margin-left:5px;}
 .categoryCover {float:left; position:relative;height:118px; width:118px; -moz-border-radius:3px;-moz-box-shadow:3px 3px 12px -5px rgb(20,20,20);-webkit-border-radius:3px;-webkit-box-shadow:3px 3px 12px -5px rgb(20,20,20);border-radius:3px;box-shadow:3px 3px 12px -5px rgb(20,20,20); padding:10px;background-color:#fff; cursor:pointer; text-align:center;}
 .categoryCover img {max-height:117px; max-width:117px; vertical-align:middle; display:block;}
 /* Category/Item View */
@@ -257,9 +258,10 @@ img.content_image {max-width:300px; max-height:200px;}
 .scroll-content-item img {width:103px; height:103px; float:left; border:1px solid #ccc;}
 .scroll-content-item.addItem {border:1px solid #bbb;background:url(/devwidgets/collections/images/add_icon.png) transparent 50% 50% no-repeat; width:103px; height:126px;}
 .scroll-content-item.selected {background-color:rgb(160,187,244);}
+.scroll-content-item div.itemPreviewTitle {float:left;position:relative;width:105px;}
 .itemHero {-moz-border-radius:3px;-moz-box-shadow:3px 3px 12px -5px rgb(20,20,20);-webkit-border-radius:3px;-webkit-box-shadow:3px 3px 12px -5px rgb(20,20,20);border-radius:3px;box-shadow:3px 3px 12px -5px rgb(20,20,20);background-color:#fff;margin:20px;padding:10px 20px 20px 20px;width:560px;float:left;position:relative;}
-.itemHead {float:left; width:100%;height:40px;}
-.itemHead div.itemTitleContainer { float:left; position:relative; width:410px; height:27px;}
+.itemHead {float:left; width:100%;min-height:40px;}
+.itemHead div.itemTitleContainer { float:left; position:relative; width:410px; min-height:27px;}
 .itemHead h1 { float:left; position:relative; width:390px; }
 .itemHead div.configureItem {float:left; position:relative; width:146px;margin-top:-2px;padding:2px;text-align:right;}
 .itemHead div.configureItem.expanded {border:1px solid #999; -moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px; padding:1px;}
